--- a/css/style.css
+++ b/css/style.css
@@ -3280,7 +3280,7 @@ h5,
 
 @media screen and (max-width: 991px) {
     .ftco-navbar-light {
-        background: #000 !important;
+        background: black !important;
         top: 0;
         position: relative;
     }
@@ -3337,14 +3337,25 @@ h5,
 }
 
 .ftco-navbar-light .navbar-toggler {
+    outline: none;
     border: none;
-    color: rgba(255, 255, 255, 0.5) !important;
+    color: white !important;
     cursor: pointer;
-    padding-right: 0;
+    padding: 5px;
     text-transform: uppercase;
     font-size: 16px;
     letter-spacing: .1em;
 }
+
+
+/* .btn:focus,
+.btn:active:focus,
+.btn.active:focus,
+.btn.focus,
+.btn:active.focus,
+.btn.active.focus {
+    outline: none;          
+} */
 
 .ftco-navbar-light.scrolled {
     position: fixed;
