--- a/css/style.css
+++ b/css/style.css
@@ -4807,21 +4807,18 @@ textarea {
 }
 
 /* Part 4 */
-.part3 {
-    padding-bottom: 0;
-    margin-bottom: 0rem;
-}
-
 #section-about {
+    position: relative;
+    overflow: visible;
+    z-index: 50;
+
     padding-top: 9rem;
     padding-bottom: 0;
-    z-index: 50;
-    overflow: visible;
 }
 
 #section-about::before {
     content: "";
-    height: 8rem;
+    height: 16rem;
     width: 100%;
     -webkit-transform: rotate(-2deg);
     -ms-transform: rotate(-2deg);
@@ -4829,45 +4826,57 @@ textarea {
     background-color: rgb(29, 29, 29);
     position: absolute;
     left: 0;
-    top: -3rem;
-    z-index: 99;
+    top: -11rem;
+    z-index: 95;
 }
 
-#section-about::after {
-    z-index: 99;
-    visibility: hidden;
-}
-
-#developer-list {
-    padding: 0 7% 50px 7%;
+#p4_developer_list {
+    padding: 3rem 7%;
     color: white;
     font-size: 1.5rem;
 }
 
-#developer-list .title {
+#p4_developer_list .title {
     margin-bottom: 4rem;
     color: white;
     font-size: 4rem;
 }
 
-#developer-names span {
+#p4_developer_names {
+    display: flex;
+    flex-wrap: wrap;
+    padding-left: 0;
+}
+
+#p4_developer_names span {
     padding: 0 0.2rem;
 }
 
-#developer-names {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.bar-container {
-    position: relative;
+.p4_bar_wrapper {
     overflow: hidden;
-    height: 500px;
+    position: relative;
 }
 
-.asoul-bar-vert {
+.p4_asoul_bar {
+    width: 100%;
+}
+
+.p4_bar_bottom {
     height: 100%;
-    width: 16rem;
+    width: 120%;
+    background-color: rgb(40, 40, 40);
+    -webkit-transform: rotate(-2deg);
+    -ms-transform: rotate(-2deg);
+    transform: rotate(-2deg);
+    position: absolute;
+    bottom: -90%;
+    left: -5%;
+    z-index: 95;
+}
+
+.p4_asoul_bar_vert {
+    height: 100%;
+    width: 14rem;
     position: absolute;
     right: 10%;
     bottom: 0;
@@ -4875,43 +4884,16 @@ textarea {
     z-index: 90;
 }
 
-@media screen and (max-width: 1200px) {
-    .asoul-bar-vert {
+@media screen and (max-width: 767px) {
+    /* No longer invade into p3 with ::before at this breakpoint */
+    #section-about {
+        overflow: hidden;
+    }
+
+    /* Hide vertical bar at this breakpoint */
+    .p4_asoul_bar_vert {
         visibility: hidden;
     }
-}
-
-.asoul-bar {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-}
-
-.asoul-bar-bg {
-    overflow: hidden;
-}
-
-.p4_offset {
-    width: 100%;
-    height: 360px;
-}
-
-.p4_bar_bottom {
-    height: 50%;
-    width: 120%;
-    background-color: rgb(40, 40, 40);
-    -webkit-transform: rotate(-2deg);
-    -ms-transform: rotate(-2deg);
-    transform: rotate(-2deg);
-    position: absolute;
-    bottom: -80px;
-    left: -5%;
-    z-index: 99;
-}
-
-#section-counter {
-    z-index: 99;
 }
 
 @media screen and (max-width: 768px)  {
